--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "web-starter-parcel",
   "version": "1.0.0",
   "description": "Web starter parcel",
-  "main": "src/index.js",
   "scripts": {
     "serve": "parcel index.html",
     "build": "parcel build index.html",
-    "test": "node_modules/mocha/bin/mocha tests/test.js"
+    "test": "node_modules/mocha/bin/mocha tests/test.ts"
   },
   "repository": {
     "type": "git",
@@ -19,8 +18,9 @@
   },
   "homepage": "https://github.com/jadjoubran/web-starter-parcel#readme",
   "devDependencies": {
+    "@types/mocha": "^10.0.1",
     "mocha": "^9.0.3",
-    "parcel": "latest"
-  },
-  "dependencies": {}
+    "parcel": "latest",
+    "ts-node": "^10.9.1"
+  }
 }
