--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "parcel index.html",
     "build": "parcel build index.html",
-    "test": "node_modules/mocha/bin/mocha tests/test.ts"
+    "test": "mocha --require ts-node/register tests/test.ts"
   },
   "repository": {
     "type": "git",
